--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 <!-- https://t.co/dKP3o1e -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- 20210119 ADD favicon-->
-<link rel="icon" type="image/png" href="/assets/images/ay.jpg">
+<link rel="icon" type="image/png" href="/assets/images/teaser.png">
 
 <script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
